--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ anyio==4.6.2.post1
 certifi==2024.8.30
 click==8.1.7
 exceptiongroup==1.2.2
+fastapi
 gitdb==4.0.11
 gitpython==3.1.43
 h11==0.14.0
@@ -30,3 +31,4 @@ sniffio==1.3.1
 tomli==2.0.2
 typer==0.12.5
 typing-extensions==4.12.2
+uvicorn
