Fix project structure

--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -5,15 +5,11 @@ services:
     branch: main
     repo_clone_url: https://github.com/therealmakervn/my-phidata-app.git
     build_command: pip install -r requirements.txt
-  # Thay đổi run_command để chỉ định đúng đường dẫn
-  run_command: cd /workspace && python -m uvicorn api.main:app --host 0.0.0.0 --port $PORT
+  envs:
+    - key: PYTHONPATH
+      value: /workspace
+  run_command: python -m uvicorn api.main:app --host 0.0.0.0 --port $PORT
   environment_slug: python
-  instance_count: 1
-  instance_size_slug: basic-xxs
-  routes:
-    - path: /
-  health_check:
-    http_path: /health
 databases:
   - name: db
     engine: PG
