Add start command

--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -1,15 +1,22 @@
-name: phidata-agent-app
+name: my-fastapi-app
 services:
 - name: web
   git:
     branch: main
-    repo_clone_url: https://github.com/therealmakervn/my-phidata-app.git
-    build_command: pip install -r requirements.txt
-  envs:
-    - key: PYTHONPATH
-      value: /workspace
-  run_command: python -m uvicorn api.main:app --host 0.0.0.0 --port $PORT
+    repo_clone_url: https://github.com/your-username/your-repo.git
+  build_command: pip install -r requirements.txt
+  run_command: gunicorn --worker-tmp-dir /dev/shm api.main:app -k uvicorn.workers.UvicornWorker --bind 0.0.0.0:$PORT
   environment_slug: python
+  envs:
+  - key: PYTHONPATH
+    value: /workspace
+  http_port: 8080
+  instance_count: 1
+  instance_size_slug: basic-xxs
+  routes:
+  - path: /
+  health_check:
+    http_path: /health
 databases:
   - name: db
     engine: PG
